2008-05-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugins.c:
   Move all symbol lookups except plugin_set_info() into plugin_init().
   Add debug message for missing init() function in a plugin.


2008-05-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/plugins.c, doc/plugin-symbols.c,
   doc/plugins.dox:
   Make GeanyCallback, geany_callbacks deprecated, and replace with
   PluginCallback, plugin_callbacks. This is because the array is owned
   by the plugin, not Geany.
 * src/plugindata.h:
   Increment plugin ABI, API versions for plugin_callbacks change.
 * src/plugindata.h, src/plugins.c, doc/plugin-symbols.c,
   doc/plugins.dox, plugins/export.c, plugins/vcdiff.c,
   plugins/demoplugin.c, plugins/filebrowser.c, plugins/htmlchars.c,
   plugins/autosave.c, plugins/classbuilder.c:
   Deprecate PLUGIN_INFO() in favour of PLUGIN_SET_INFO().
   Remove plugin symbol info(), which is replaced by plugin_set_info()
   and a new symbol plugin_info. This is so the PluginInfo struct is
   zero'd first by Geany, so plugins are still ABI compatible if we
   want to add any more fields in the future.
   Fail to load a plugin if plugin_info->name is not set.
   Remove now unused string.h include from plugindata.h.


2008-05-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/templates.c, src/build.c, src/utils.c, src/ui_utils.h,
   src/win32.c, src/utils.h, src/keybindings.c, src/printing.c,
   src/tools.c, src/sciwrappers.c, src/project.c, src/sciwrappers.h,
   src/encodings.c, src/prefs.c, src/dialogs.c, src/navqueue.c,
   src/plugindata.h, src/geany.h, src/about.c, src/treeviews.c,
   src/msgwindow.c, src/callbacks.c, src/notebook.c, src/keyfile.c,
   src/filetypes.c, src/search.c, src/document.c, src/plugins.c,
   src/main.c, src/editor.c, src/symbols.c, src/socket.c,
   src/editor.h, src/ui_utils.c, plugins/export.c, plugins/vcdiff.c,